@@ -19,6 +19,11 @@ implements the actual program that runs runs as daemon in background and
 opens pseudo-ttys. You can run it from your X startup scripts, for
 example, although it is not dependent on a working DISPLAY and, in fact,
 can open windows on multiple X displays.
+.PP
+Both \fBrxvtd\fP and \fBrxvtc\fP use the environment variable
+\fBRXVT_SOCKET\fP to create a listening socket and to contact
+the \fBrxvtd\fP, respectively. If the variable is missing,
+"\fB$HOME/.rxvt-\fP<nodename>" is used.
 .PP 
 \fBrxvtc\fP is the client program of this duo. It connects to the
 \fBrxvtd\fP daemon and requests a new terminal window. It
