@@ -23,6 +23,7 @@
         - added manpage for rxvtc/rxvtd based on the one eduard block
           contributed.
         - use reverse video for normal bold text unless colorBD has been set.
+        - fixed endless loop when selection is valid but empty.
         - many other minor bugfixes.
 
 1.8  Mon Feb  2 20:09:18 CET 2004
